force-app/main/default/objects/Account/fields/Company_Research__c.field-meta.xml
<CustomField>
    <fullName>Company_Research__c</fullName>
    <label>Company Research</label>
    <description>AI-generated company research. Updated by Scout at creation and refreshed by Lookahead Writer when older than 30 days. Prepend-only — new entries added at top with date.</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>