force-app/main/default/objects/Account/fields/Onboarded_Account__c.field-meta.xml
<CustomField>
    <fullName>Onboarded_Account__c</fullName>
    <label>Onboarded Account</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>