force-app/main/default/objects/Account/fields/Research_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Research_Last_Updated__c</fullName>
    <label>Research Last Updated</label>
    <description>Date when Company_Research__c was last written or refreshed. Used by agents to determine whether to refresh research.</description>
    <type>Date</type>
</CustomField>